f Fix carousel on iOS for real!

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -274,6 +274,9 @@ a {
       overflow: hidden;
       width: 100%;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      touch-action: pan-y;
+      -webkit-user-select: none;
+      user-select: none;
     }
 
     .carousel-track {
@@ -290,6 +293,7 @@ a {
       display: flex;
       flex-direction: column;
       // gap: 2rem;
+      pointer-events: none;
     }
 
     .carousel-slide.slide-2 {
